--- a/index.html
+++ b/index.html
@@ -4,12 +4,51 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Games</title>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="stylesheet" href="css/flexboxgrid.min.css" type="text/css">
   <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
-
+  <main class="main">
+    <h2 class="main__title">Онлайн игры</h2>
+    <ul class="main__list">
+      <li class="main__item">
+        <a class="main__link" href="#">Вход</a>
+      </li>
+      <li class="main__item">
+        <a class="main__link" href="#">Регистрация</a>
+      </li>
+      <li class="main__item">
+        <a class="main__link" href="#">Dota 2</a>
+      </li>
+      <li class="main__item">
+        <a class="main__link" href="#">Cs GO</a>
+      </li>
+      <li class="main__item">
+        <a class="main__link" href="#">PUBG</a>
+      </li>
+    </ul>
+    <ul class="main__img-list">
+      <li class="main__img-item">
+        <a class="main__img-link" href="https://www.dota2.com/news" target="_blank">
+          <img class="main__img" src="media/img/dota-logo.jpg" alt="dota-logo">
+        </a>
+      </li>
+      <li class="main__img-item">
+        <a class="main__img-link" href="https://blog.counter-strike.net/"  target="_blank">
+          <img class="main__img" src="media/img/cs-logo.jpg" alt="cs">
+        </a>
+      </li>
+      <li class="main__img-item">
+        <a class="main__img-link" href="https://asia.battlegrounds.pubg.com/ru/category/pc-ru/">
+          <img class="main__img" src="media/img/pugb-logo.jpg" alt="pugb-logo">
+        </a>
+      </li>
+    </ul>
+    <p class="main__text">Лучшие игры по состоянию STEAM на 2020 год</p>
+    <h3 class="main__subtitle">Где мы?</h3>
+    <div  style="position:relative;overflow:hidden;"><a  href="https://yandex.uz/maps/10335/tashkent/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Ташкент</a><a  href="https://yandex.uz/maps/10335/tashkent/?feedback=map%2Fedit&feedback-context=map.context&ll=69.281972%2C41.309773&utm_medium=mapframe&utm_source=maps&z=12.4" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс.Карты</a><iframe class="map" src="https://yandex.uz/map-widget/v1/-/CCUu6EBvWB" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+  </main>
 </body>
 </html>
